<resources>
    <string name="app_name">Menu Project</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="button_new">New Activity</string>
    <string name="button_sms">sms</string>
    <string name="button_phone">phone</string>
    <string name="button_web">web</string>
    <string name="button_map">map</string>
    <string name="button_share">share</string>
    <string name="chooser_title">Share the love!</string>
</resources>
